force-app/main/default/objects/Pull_Ticket__c/Pull_Ticket__c.object-meta.xml
<CustomObject>
    <label>Pull Ticket</label>
    <nameField>
        <displayFormat>PT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pull Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>