force-app/main/default/objects/Pull_Ticket__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pull Tickets (Assigned To)</relationshipLabel>
    <relationshipName>Pull_Tickets_User</relationshipName>
    <type>Lookup</type>
</CustomField>