force-app/main/default/objects/Pull_Ticket__c/fields/Item_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Item_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Catalog</label>
    <referenceTo>Item_Catalog__c</referenceTo>
    <relationshipLabel>Pull Tickets</relationshipLabel>
    <relationshipName>Pull_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>