force-app/main/default/objects/Pull_Ticket__c/fields/Plants__c.field-meta.xml
<CustomField>
    <fullName>Plants__c</fullName>
    <label>Plants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>