force-app/main/default/objects/Pull_Ticket__c/fields/Pulled_By__c.field-meta.xml
<CustomField>
    <fullName>Pulled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pulled By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pull Tickets (Pulled By)</relationshipLabel>
    <relationshipName>Pull_Tickets_Pulled_By</relationshipName>
    <type>Lookup</type>
</CustomField>