force-app/main/default/objects/Pull_Ticket__c/fields/Pulled_Date__c.field-meta.xml
<CustomField>
    <fullName>Pulled_Date__c</fullName>
    <label>Pulled Date</label>
    <type>Date</type>
</CustomField>