force-app/main/default/objects/Pull_Ticket__c/fields/Quantity_Pulled__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Pulled__c</fullName>
    <label>Quantity Pulled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>