force-app/main/default/objects/Pull_Ticket__c/fields/Trees_Count__c.field-meta.xml
<CustomField>
    <fullName>Trees_Count__c</fullName>
    <label>Trees Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>